# job_parser

./: .gitignore  README.md  main.py  pyproject.toml  vacancies.csv  vacancies.json  vacancies.txt  vacancies.xlc
src/: abstractions.py  config.py  database.py  headhunter.py  saver.py  sql_query.sql  superjob.py  utils.py  utilsDB.py  vacancy.py
